crates/pg_syntax/tests/snapshots/postgres_regress/fast_default@191.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO leader VALUES (1, 1), (2, 2);"
---
InsertStmt@0..41
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "leader"
  Whitespace@18..19 " "
  SelectStmt@19..39
    Values@19..25 "VALUES"
    Whitespace@25..26 " "
    Ascii40@26..27 "("
    List@27..31
      AConst@27..28
        Iconst@27..28 "1"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..31
        Iconst@30..31 "1"
    Ascii41@31..32 ")"
    Ascii44@32..33 ","
    Whitespace@33..34 " "
    Ascii40@34..35 "("
    List@35..39
      AConst@35..36
        Iconst@35..36 "2"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..39
        Iconst@38..39 "2"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

