crates/pg_syntax/tests/snapshots/postgres_regress/fast_default@193.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: ALTER TABLE leader DROP c;
---
AlterTableStmt@0..26
  Alter@0..5 "ALTER"
  Whitespace@5..6 " "
  Table@6..11 "TABLE"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "leader"
  Whitespace@18..19 " "
  AlterTableCmd@19..25
    Drop@19..23 "DROP"
    Whitespace@23..24 " "
    Ident@24..25 "c"
  Ascii59@25..26 ";"

