crates/pg_syntax/tests/snapshots/postgres_regress/fast_default@194.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: DELETE FROM leader;
---
DeleteStmt@0..19
  DeleteP@0..6 "DELETE"
  Whitespace@6..7 " "
  From@7..11 "FROM"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "leader"
  Ascii59@18..19 ";"

