crates/pg_syntax/tests/snapshots/postgres_regress/fast_default@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE SCHEMA fast_default;
---
CreateSchemaStmt@0..27
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Schema@7..13 "SCHEMA"
  Whitespace@13..14 " "
  Ident@14..26 "fast_default"
  Ascii59@26..27 ";"

