crates/pg_syntax/tests/snapshots/postgres_regress/fast_default@203.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: INSERT INTO vtype2 VALUES (1);
---
InsertStmt@0..30
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "vtype2"
  Whitespace@18..19 " "
  SelectStmt@19..28
    Values@19..25 "VALUES"
    Whitespace@25..26 " "
    Ascii40@26..27 "("
    List@27..28
      AConst@27..28
        Iconst@27..28 "1"
  Ascii41@28..29 ")"
  Ascii59@29..30 ";"

